<resources>
    <string name="app_name">NotificationScheduler</string>
    <string name="notification_title">Job Service</string>
    <string name="notification_text">Your Job is running</string>
    <string name="network_type_required">Network Type Required</string>
    <string name="none_radio_button">None</string>
    <string name="any_radio_button">Any</string>
    <string name="wifi_radio_button">Wifi</string>
    <string name="schedule_job_button">Schedule Job</string>
    <string name="cancel_jobs_button">Cancel Jobs</string>
    <string name="toast_job">Job Scheadule, job will run when the constraints are met</string>
    <string name="jobs_cancelled_toast">Jobs cancelled</string>
    <string name="no_constraint_toast">Please set at least one constraint</string>
    <string name="requieres_label">Requieres</string>
    <string name="device_idle_switch">Device Idle</string>
    <string name="device_charging_swtich">Device Charging</string>
    <string name="override_deadine_label">Override Deadine:</string>
    <string name="not_set_label">Not Set</string>
</resources>